--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.8,<4.0"
 textual = "^0.34.0"
 pyjq = "^2.6.0"
 typer = {extras = ["all"], version = "^0.9.0"}
+pyperclip = "^1.8.2"
 
 
 [tool.poetry.group.dev.dependencies]
